infrastructure/controllers/base/databases/mysql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: percona-mysql
  labels:
    app.kubernetes.io/name: percona-mysql
